# rint-rust-kernel

./: .gitignore  Cargo.toml  LICENCE  LICENSE  README.md  limine.cfg  limine.conf  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
arch-riscv64/: Cargo.toml
arch-riscv64/src/: lib.rs
arch-x86_64/: Cargo.toml
arch-x86_64/src/: lib.rs
crates/hal/src/: lib.rs
crates/metrics/src/: lib.rs
crates/sched-sim/: Cargo.toml
crates/sched-sim/src/: main.rs
crates/scheduler/src/: joint.rs  lib.rs
docs/: BOOT_PROCESS.md  LINKER_SCRIPT.md  m1-roadmap.md
kernel/: Cargo.toml  x86_64-rint.json
kernel/.cargo/: config.toml
kernel/ld/: link.ld
kernel/src/: lib.rs  main.rs
scripts/: make_iso.sh  qemu-run-x86_64.sh  qemu.sh
scripts/perf/: run_150_overload.sh
